<resources>
    <string name="app_name">Converter</string>

    <string name="hello_world">Kaustuv</string>
    <string name="action_settings">Settings</string>
    <string name="T">STANDARD CONVERTER</string>
    <string name="L">LENGTH</string>
    <string name="M">MASS</string>
    <string name="Ti">TIME</string>
    <string name="lc">Lenght Converter</string>
    <string name="FR">From</string>
    <string name="To">Small Text</string>
    <string name="TO">Convert</string>
    <string name="to">TO</string>
    <string name="b4">Convert</string>
    <string-array name="lenght_values">
        <item>angstrom</item>
        <item>astronomical unit</item>
        <item>centimeter</item>
        <item>chain</item>
        <item>decimeter</item>
        <item>fathom</item>
        <item>foot</item>
        <item>furlong</item>
        <item>inch</item>
        <item>kilometer</item>
        <item>league</item>
        <item>light year</item>
        <item>meter</item>
        <item>mile</item>
        <item>millimeter</item>
        <item>micrometer</item>
        <item>micron</item>
        <item>nanometer</item>
        <item>nautical mile</item>
        <item>parsec</item>
        <item>rod</item>
        <item>yard</item>
    </string-array>
    <string name="answer">Medium Text</string>
    <string name="t">Small Text</string>
    <string name="y">To</string>
    <string name="title_activity_lenght">LenghtActivity</string>
    <string name="text3">Large Text</string>
    <string name="title_activity_activity_mass">activity_mass</string>
    <string name="title_activity_mass">MassActivity</string>
    <string name="mc">MassConverter</string>
    <string name="textview3">Large Text</string>
    <string name="textview2">Large Text</string>
    <string name="text">Large Text</string>
    <string name="title_activity_time">TimeActivity</string>


</resources>
